  - Access: admin user has now access to any project.
  - Notification settings
  - Gitlab::Git set of objects to abstract from grit library
  - Replace Unicorn web server with Puma
  - Backup/Restore refactored. Backup dump project wiki too now
  - Restyled Issues list. Show milestone version in issue row
  - Restyled Merge Request list

v 5.0.0
  - Replaced gitolite with gitlab-shell
  - Removed gitolite-related libraries
  - State machine added
  - Setup gitlab as git user
  - Internal API
  - Show team tab for empty projects
  - Import repository feature
  - Updated rails
  - Use lambda for scopes
  - Redesign admin area -> users
  - Redesign admin area -> user
  - Secure link to file attachments
  - Add validations for Group and Team names
  - Restyle team page for project
  - Update capybara, rspec-rails, poltergeist to recent versions
  - Wiki on git using Gollum
  - Added Solarized Dark theme for code review
  - Dont show user emails in autocomplete lists, profile pages
  - Added settings tab for group, team, project
  - Replace user popup with icons in header
  - Handle project moving with gitlab-shell
  - Added select2-rails for selectboxes with ajax data load
  - Fixed search field on projects page
  - Added teams to search autocomplete
  - Move groups and teams on dashboard sidebar to sub-tabs
  - API: improved return codes and docs. (Felix Gilcher, Sebastian Ziebell)
  - Redesign wall to be more like chat
  - Snippets, Wall features are disabled by default for new projects

v 4.2.0
  - Teams
  - User show page. Via /u/username
  - Show help contents on pages for better navigation
  - Async gitolite calls
  - added satellites logs
  - can_create_group, can_create_team booleans for User
  - Process web hooks async
  - GFM: Fix images escaped inside links
  - Network graph improved
  - Switchable branches for network graph
  - API: Groups
  - Fixed project download

v 4.1.0
  - Optional Sign-Up
  - Discussions
  - Satellites outside of tmp